# windbg-ext-mcp

./: .coverage  .gitignore  LICENSE  README.md  install_client_config.py  pyproject.toml
.github/workflows/: ci.yml
docs/: CHANGELOG.md  KernelModeUsage.md  README.md  getting-started.md  mcp-tools-reference.md
extension/: windbgmcpExt.sln  windbgmcpExt.vcxproj  windbgmcpExt.vcxproj.filters
extension/src/: dllmain.cpp  pch.h  windbgmcpExt.def
extension/src/command/: basic_command_handlers.cpp  basic_command_handlers.h  command_handlers.cpp  command_handlers.h  command_registry.cpp  command_registry.h  command_utilities.cpp  command_utilities.h  diagnostic_command_handlers.cpp  diagnostic_command_handlers.h  enhanced_command_handlers.cpp  enhanced_command_handlers.h
extension/src/ipc/: mcp_server.cpp  mcp_server.h
extension/src/utils/: constants.h  output_callbacks.cpp  output_callbacks.h  types.cpp
mcp_server/: __init__.py  __main__.py  config.py  requirements.txt  selftest.py  server.py  setup.py
mcp_server/commands/: __init__.py  command_handlers.py  windbg_api.py
mcp_server/core/: __init__.py  communication.py  communication_protocols.py  connection_manager.py  connection_resilience.py  context.py  enhanced_communication.py  error_handler.py  retry_utils.py  server_initialization.py  session_recovery.py  unified_cache.py  validation.py
mcp_server/core/async_ops/: __init__.py  batch_executor.py  monitoring.py  task_manager.py  utilities.py
mcp_server/core/execution/: __init__.py  executor.py  result.py  strategies.py  timeout_resolver.py
mcp_server/core/hints/: __init__.py  data_structures.py  definitions.py  validator.py
mcp_server/core/performance/: __init__.py  caching.py  command_optimizer.py  compression.py  coordinator.py  streaming.py
mcp_server/lib/: constants.py
mcp_server/scripts/: start_mcp_server.ps1
mcp_server/tests/: test_command_validation.py  test_install_client_config_dryrun.py  test_message_protocol.py  test_timeout_resolver.py  test_tools_registry.py  test_unified_execution.py
mcp_server/tools/: __init__.py  analysis_tools.py  callback_tools.py  execution_tools.py  performance_tools.py  session_tools.py  support_tools.py  tool_utilities.py
