[tool.poetry]
name = "windbg-ext-mcp"
version = "0.1.0"
description = "WinDbg Extension for MCP integration"
authors = ["NadavLorber"]
readme = "README.md"
packages = [{include = "mcp_server"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pywin32 = ">=305"
fastmcp = ">=2.3.5"
pydantic = ">=2.0.0"
uvicorn = ">=0.15.0"
typing-extensions = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
